# Onvif

./: .gitignore  CMakeLists.txt  Onvif.cpp  Onvif.h  Server.cpp  Server.h  generate.sh
Device/: DevAuth.cpp  DevAuth.h  DevCapabilities.cpp  DevCapabilities.h  DevInformation.cpp  DevInformation.h  DevMedia2Configuration.cpp  DevMedia2Configuration.h  DevMediaConfiguration.cpp  DevMediaConfiguration.h  WSDiscovery.cpp  WSDiscovery.h
Interface/: Authentication.h  Capabilities.h  Information.h  Media2Configuration.h  MediaConfiguration.h
Service/: Device.cpp  Device.h  Media.cpp  Media.h  Media2.cpp  Media2.h  PTZ.cpp  PTZ.h  RecordingBinding.nsmap  Service.cpp  Service.h  WSDiscovery.cpp  WSDiscovery.h  soapDeviceBindingService.cpp  soapDeviceBindingService.h  soapDeviceIOBindingService.cpp  soapDeviceIOBindingService.h  soapImagingBindingService.cpp  soapImagingBindingService.h  soapMedia2BindingService.cpp  soapMedia2BindingService.h  soapMediaBindingService.cpp  soapMediaBindingService.h  soapPTZBindingService.cpp  soapPTZBindingService.h  soapPullPointSubscriptionBindingService.cpp  soapPullPointSubscriptionBindingService.h  soapRecordingBindingService.cpp  soapRecordingBindingService.h  soapReplayBindingService.cpp  soapReplayBindingService.h  soapRuleEngineBindingService.cpp  soapRuleEngineBindingService.h  soapSearchBindingService.cpp  soapSearchBindingService.h  soapwsddService.cpp  soapwsddService.h
Test/: CMakeLists.txt  test.cpp
gSOAP/: generate.sh
gSOAP/Resource/gsoap-2.8/: LICENSE.txt  Makefile  config.h  config.h.in  config.status  gsoapck.pc  gsoapssl++.pc
gSOAP/Resource/gsoap-2.8/autom4te.cache/: output.0  requests  traces.0
gSOAP/ToolKit/lib/pkgconfig/: gsoap++.pc  gsoap.pc  gsoapck++.pc  gsoapssl.pc
gSOAP/ToolKit/share/gsoap/import/: wsa5.h
